--- a/Front end-files/Coinswapz-frontend/index5.html
+++ b/Front end-files/Coinswapz-frontend/index5.html
@@ -15,7 +15,7 @@
               My Balance
             </div>
             <div class="summary-balance">
-              &#8377; 29300.00
+              <!-- &#8377;--> 293.14 ETH
             </div>
             <div class="summary-text-2">
               +&nbsp;9800.00
@@ -30,11 +30,13 @@
             <div class="upper-row">
               <div class="card-item">
                 <span>Active Balance</span>
-                <span>1&nbsp;8000 <span class="dollar">&#8377;</span>
+                <span>
+                  <!-- &nbsp; -->
+                  321.12 <span class="dollar">ETH</span>
               </div>
               <div class="card-item">
                 <span>My Save it</span>
-                <span>4&nbsp;000 <span class="dollar">&#8377;</span>
+                <span>21.45 <span class="dollar">ETH</span>
               </div>
             </div>
             <div class="lower-row">
@@ -65,7 +67,7 @@
                 <div class="t-time">03.45PM
                 </div>
               </div>
-              <div class="t-amount">+&nbsp;7500&#8377;
+              <div class="t-amount">+&nbsp;77ETH
               </div>
             </div>
   
@@ -76,7 +78,7 @@
                 <div class="t-time">03.45 AM
                 </div>
               </div>
-              <div class="t-amount">+&nbsp;2000&#8377;
+              <div class="t-amount">+&nbsp;20ETH
               </div>
             </div>
   
@@ -87,7 +89,7 @@
                 <div class="t-time">08.00PM
                 </div>
               </div>
-              <div class="t-amount red">-&nbsp;1200&#8377;
+              <div class="t-amount red">-&nbsp;10ETH
               </div>
             </div>
           </div>
